fixed vertical right alignment

--- a/src/scripts/OSUIFramework/Pattern/Tabs/scss/_tabs.scss
+++ b/src/scripts/OSUIFramework/Pattern/Tabs/scss/_tabs.scss
@@ -31,7 +31,6 @@
 				grid-column: 2;
 
 				&-item {
-					justify-content: flex-end;
 					padding: var(--space-xs) 0 var(--space-xs) var(--space-base);
 
 					&::after {
